@@ -143,17 +143,19 @@ class UrlRequestUtilTests(unittest.TestCase):
             self.fail()
 
     def testUnpBatchFetchGetEbi(self):
-        """UniProt batch fetch (proteins) get test (EBI endpoint)"""
-        baseUrl = "https://www.ebi.ac.uk"
-        endPoint = "proteins/api/proteins"
+        """UniProt batch fetch (proteins) get test"""
+        baseUrl = "https://rest.uniprot.org"
+        # endPoint = "proteins/api/proteins"
         idList = self.__unpIdList1[:10]
+        idListStr = "%2C%20".join(idList)
+        endPoint = "uniprotkb/accessions?accessions=" + idListStr
         try:
             hL = [("Accept", "application/xml")]
-            pD = {}
-            pD["size"] = "-1"
-            pD["accession"] = ",".join(idList)
+            # pD = {}
+            # pD["size"] = "-1"
+            # pD["accession"] = ",".join(idList)
             ureq = UrlRequestUtil()
-            ret, retCode = ureq.get(baseUrl, endPoint, pD, headers=hL)
+            ret, retCode = ureq.get(baseUrl, endPoint, None, headers=hL)
             logger.debug("XML result %r", ret)
             nm = ret.count("<entry ")
             logger.info("Result count %d status code %r", nm, retCode)
@@ -165,16 +167,18 @@ class UrlRequestUtilTests(unittest.TestCase):
 
     def testUnpBatchFetchFail(self):
         """UniProt batch fetch (proteins) get test (expected failure)"""
-        baseUrl = "https://www0.ebi.ac.uk"
-        endPoint = "proteins/api/proteins"
+        baseUrl = "https://rest0.uniprot.org"
+        # endPoint = "proteins/api/proteins"
         idList = self.__unpIdList1[:10]
+        idListStr = "%2C%20".join(idList)
+        endPoint = "uniprotkb/accessions?accessions=" + idListStr
         try:
             hL = [("Accept", "application/xml")]
-            pD = {}
-            pD["size"] = "-1"
-            pD["accession"] = ",".join(idList)
+            # pD = {}
+            # pD["size"] = "-1"
+            # pD["accession"] = ",".join(idList)
             ureq = UrlRequestUtil()
-            ret, retCode = ureq.get(baseUrl, endPoint, pD, headers=hL)
+            ret, retCode = ureq.get(baseUrl, endPoint, None, headers=hL)
             logger.debug("XML result %r", ret)
             logger.debug("Result status code %r", retCode)
             self.assertEqual(ret, None)
