@@ -126,3 +126,4 @@
  6-Jun-2022  - V1.35 Resolve pylint issues in FastaUtil
  8-Sep-2022  - V1.36 Resolve pylint issues
  3-Oct-2022  - V1.37 Add options to UrlRequestUtil
+ 5-Dec-2022  - V1.38 Update UniProt fetching tests
